# laravel/routes/v1/permissions.php
@@ -3,9 +3,9 @@
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
 
-use App\Http\Controllers\ControllerRoles;
+use App\Http\Controllers\ControllerPermissions;
 
 Route::prefix('/admin')->middleware(["jwt.cookie","auth:api"])->group(function () {
     /** Role */
-    Route::middleware(['auth.permission:READ_ROLE'])->apiResource('/roles', ControllerRoles::class)->only(['index']);
+    // Route::middleware(['auth.permission:READ_PERMISSION'])->apiResource('/permissions', ControllerPermissions::class);
 });
