# laravel/routes/v1/users.php
@@ -2,14 +2,14 @@
 
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-use Illuminate\Support\Facades\Log;
 
-use App\Http\Controllers\ControllerAuth;
 use App\Http\Controllers\ControllerUsers;
 
 Route::prefix('/admin')->middleware(["jwt.cookie","auth:api"])->group(function () {
     /** User */
-    Route::apiResource('/user', ControllerUsers::class)->middleware(['auth.permission:READ_USER']);
-    Route::get('/update/{id}', [ControllerAuth::class, 'profile']);
+    Route::middleware(['auth.permission:READ_USER'])->apiResource('/user', ControllerUsers::class)->only(['index', 'show']);
+    Route::middleware(['auth.permission:CREATE_USER'])->apiResource('/user', ControllerUsers::class)->only(['store']);
+    Route::middleware(['auth.permission:UPDATE_USER'])->apiResource('/user', ControllerUsers::class)->only(['update']);
+    Route::middleware(['auth.permission:DELETE_USER'])->apiResource('/user', ControllerUsers::class)->only(['destroy']);
 });
 
